--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ highlighter:       rouge
 excerpt_separator: <!--more-->
 permalink:         /articles/:year-:month/:title
 
-kramdown: 
+kramdown:
   auto_ids: true
   footnote_nr: 1
   entity_output: as_char
@@ -35,7 +35,7 @@ kramdown:
 owner:
   name: Gabby Ortman
   avatar: avatar.jpg
-  job: "CS && Undergrad Research @ Iowa State University" 
+  job: "Software Engineer @ Red Nova Labs"
   bio: "there's no place like ~/"
   email:
   disqus-shortname:
@@ -50,8 +50,6 @@ owner:
   bing-verify:
   github: nucle0tides
   gitlab: #username
-  stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
-  linkedin: gabbyortman
   skype: #username
   xing: #username
   instagram: gabby.ortman
