--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "astro": "^4.16.0",
-    "@astrojs/mdx": "^3.1.0"
+    "@astrojs/mdx": "^3.1.0",
+    "98.css": "^0.1.21",
+    "astro": "^4.16.0"
   }
 }
