--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "@astrojs/mdx": "^3.1.0",
-    "98.css": "^0.1.21",
-    "astro": "^4.16.0"
+    "@astrojs/mdx": "^4.3.13",
+    "@vanilla-extract/css": "^1.17.5",
+    "@vanilla-extract/sprinkles": "^1.6.5",
+    "astro": "^5.16.5"
+  },
+  "devDependencies": {
+    "@vanilla-extract/vite-plugin": "^5.1.3"
   }
 }
